# tezland

./: .env.development  .gitignore  LICENSE  README.md  docker-compose.yml  gas and storage opt.txt  notes.txt  opt results.txt  package-lock.json  package.json  pyproject.toml  smartpy-node-dev.sh  tsconfig.json
contracts/: Administrable.py  AllowedPlaceTokens.py  BasicPermissions.py  ContractMetadata.py  DistrictDAO.py  FA2.py  FA2PermissionsAndWhitelist.py  FA2_Administration.py  FA2_Royalties.py  FA2_legacy.py  FA2_proxy.py  Fees.py  Manageable.py  MerkleTree.py  Moderation.py  Moderation_v2.py  Pausable.py  PermittedFA2.py  PermittedFA2_v2.py  TL_Blacklist.py  TL_Dutch.py  TL_Dutch_v2.py  TL_LegacyRoyalties.py  TL_Marketplace.py  TL_Minter.py  TL_Minter_v2.py  TL_Places.py  TL_RoyaltiesAdapter.py  TL_RoyaltiesAdapterLegacyAndV1.py  TL_TokenFactory.py  TL_TokenRegistry.py  TL_World.py  TL_World_v2.py  Tokens.py  UpgradeTest.py  Upgradeable.py  Utils.py  Whitelist.py  Worlds.py
docker-scripts/: 001-ipfs-init.sh
src/: index.ts  ipfs.ts  storage.ts  user.config.ts
tests/: Administrable_tests.py  AllowedPlaceTokens_tests.py  BasicPermissions_tests.py  ContractMetadata_tests.py  DistrictDAO_tests.py  FA2PermissionsAndWhitelist_tests.py  FA2_Administration_tests.py  FA2_Royalties_tests.py  FA2_legacy_tests.py  FA2_old_tests.py  FA2_proxy_tests.py  FA2_tests.py  Fees_tests.py  Manageable_tests.py  Moderation_tests.py  Moderation_v2_tests.py  Pausable_tests.py  PermittedFA2_tests.py  PermittedFA2_v2_tests.py  TL_Dutch_tests.py  TL_Dutch_v2_tests.py  TL_Minter_tests.py  (+12 more)
(+91 files in other folders)
